bundle java8-openjfx directly